# anonymous-chat-client

./: .gitignore  README.md  exceptions.py  main.py  pyproject.toml  register.py  requirements.txt
interfaces/: __init__.py  gui.py  reader_interface.py  watcher_interface.py  wathcer_interface.py  writer_interface.py
