[tool.poetry]
name = "anonymous-chat-client"
version = "0.1.0"
description = ""
authors = ["Denis Novikov <alpden550@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
aiofiles = "^0.6.0"
loguru = "^0.5.3"
async-timeout = "^3.0.1"
pip = "^20.2.4"
install = "^1.3.4"
anyio = "^2.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
